# TreeDetector

./: .gitignore  CMakeLists.txt  README.md  avg_SSIM_score_template.txt  avg_SSIM_score_template3.txt  old_main.cpp  result_fig1_canny_Edge_matching.txt  result_fig2_canny_Edge_matching.txt  result_fig3_canny_Edge_matching.txt  result_fig4_canny_Edge_matching.txt  result_fig5_canny_Edge_matching.txt  result_fig6_canny_Edge_matching.txt  result_fig7_canny_Edge_matching.txt  result_fig8_canny_Edge_matching.txt  result_fig9_canny_Edge_matching.txt  results.txt  selected_results_refinement_0407_0.txt
include/: tree_detection_util.h
src/: erosion.cpp  main.cpp  shape_context.cpp  tree_detection_util.cpp
